HW3/javali_tests/TODO/nonobjectAccess.javali.err
Debug information for file: javali_tests/TODO/nonobjectAccess.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| VarDecl (name: x, type: int)
| VarDecl (name: i, type: int)
| VarDecl (name: a, type: int[])
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
| | | Assign ()
| | | | Var (name: x)
| | | | Field (fieldName: c)
| | | | | Var (name: a)
Error message from reference is: A class type was required, but int[] was found

Test failed because an exception was thrown:
    cd.ir.Symbol$ArrayTypeSymbol cannot be cast to cd.ir.Symbol$ClassSymbol
Stack trace:
java.lang.ClassCastException: cd.ir.Symbol$ArrayTypeSymbol cannot be cast to cd.ir.Symbol$ClassSymbol
	at cd.frontend.semantic.TableCreator.field(TableCreator.java:410)
	at cd.frontend.semantic.TableCreator.field(TableCreator.java:1)
	at cd.ir.Ast$Field.accept(Ast.java:282)
	at cd.ir.ExprVisitor.visit(ExprVisitor.java:15)
	at cd.frontend.semantic.TableCreator.assign(TableCreator.java:216)
	at cd.frontend.semantic.TableCreator.assign(TableCreator.java:1)
	at cd.ir.Ast$Assign.accept(Ast.java:509)
	at cd.ir.AstVisitor.visit(AstVisitor.java:16)
	at cd.ir.AstVisitor.visitChildren(AstVisitor.java:28)
	at cd.ir.AstVisitor.dflt(AstVisitor.java:37)
	at cd.ir.AstVisitor.seq(AstVisitor.java:100)
	at cd.ir.Ast$Seq.accept(Ast.java:677)
	at cd.ir.AstVisitor.visit(AstVisitor.java:16)
	at cd.frontend.semantic.TableCreator.methodDecl(TableCreator.java:90)
	at cd.frontend.semantic.TableCreator.classDecl(TableCreator.java:61)
	at cd.frontend.semantic.SemanticAnalyzer.check(SemanticAnalyzer.java:175)
	at cd.Main.semanticCheck(Main.java:111)
	at cd.test.AbstractTestAgainstFrozenReference.testSemanticAnalyzer(AbstractTestAgainstFrozenReference.java:146)
	at cd.test.AbstractTestAgainstFrozenReference.test(AbstractTestAgainstFrozenReference.java:50)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:497)
	at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:50)
	at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
	at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:47)
	at org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:17)
	at org.junit.internal.runners.statements.FailOnTimeout$CallableStatement.call(FailOnTimeout.java:298)
	at org.junit.internal.runners.statements.FailOnTimeout$CallableStatement.call(FailOnTimeout.java:292)
	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
	at java.lang.Thread.run(Thread.java:745)
