HW3/javali_tests/TODO/nonobjectAccess.javali
// TEST: no access to non-object type
class Main {
	int[] a;
	void main() {
		// TODO: TYPE_ERROR expected
		x = a.c;
	}
}